correcting rowgap on home when switching from some feed views to profile + preparing for implementation of currentInnersection prop

--- a/src/style/pages/home.scss
+++ b/src/style/pages/home.scss
@@ -22,3 +22,7 @@
 .home-detailsView{
     row-gap: 1rem;
 }
+
+.home-innerSection-profile{
+    row-gap: 3rem;
+}
